--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,25 @@
     <title>Slider Skill Assessment</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
 
     <!-- slider -->
     <section class="slider">
-        <h2>Slider Project</h2>
+        <h2 class="slider-header">Bao-Zi</h2>
+        <!-- cards -->
+        <div class="slider-cards">
+            <div class="img-container">
+                <div class="images">
+                    <a href="#">
+                        <img src="./assets/images/baozi 2.jpeg"  alt="baozi-image">
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
-    
+
 </body>
 <script src="./assets/js/index.js"></script>
+
 </html>
